k8s/base/jlapp-pagamento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jlapp-pagamento-service
spec:
  selector:
    app: jlapp-pagamento
  ports:
  - port: 8072
    targetPort: 8072
